--- a/src/client/styles/smartphone.css
+++ b/src/client/styles/smartphone.css
@@ -192,12 +192,8 @@
         overflow: hidden;
         position: relative;
         max-height: 95px;
-        transition: max-height 0.5s;
+        transition: max-height 0.3s;
         transition-timing-function: ease-out;
-    }
-
-    .task-properties.expanded {
-        max-height: 100000px;
     }
     
     .task-properties-project-name {
